--- a/123.html
+++ b/123.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>git 연습</h1>
-    <h3>git git 연습 변형</h3>
+    <h2>깃깃깃깃깃깃</h2>
 </body>
 </html>
